@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLOPT_XOAUTH2_BEARER (libcurl 7.33.0+).
+
         * Added CURLOPT_SASL_IR (libcurl 7.31.0+).
 
         * Added CURLOPT_LOGIN_OPTIONS (libcurl 7.34.0+).
